View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032179 | Open CASCADE | OCCT:Visualization | public | 2021-02-26 22:19 | 2021-08-24 14:19 |
Reporter | nds | Assigned To | nds | ||
Priority | normal | Severity | major | ||
Status | new | Resolution | open | ||
Product Version | 7.5.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032179: Visualization, TKOpenGl - viewer clears QML controls content during redraw on Intel HD Graphics 520 | ||||
Description | The problem is that the icons in the custom application are simple rects, see attached snapshots. The problem appears after starting using sRGB mode. The devices where it's reproduced: - Windows Tablet: i3-6100U / 8Gb / 128Gb SSD / 12" / HD Graphics 520 (OpenGl debug information about this device is in attached gldebug_tablet.log got by CADAssistant.exe --cout --gldebug --verbose > c:/work/gldebug_tablet.log) - Note when using HD Graphics 520 integrated video card. The issue is reproducible on 5 years old Intel drivers (04/05/2016): GLvendor: Intel GLdevice: Intel(R) HD Graphics 520 GLversion: 4.4.0 - Build 20.19.15.4454 [GLSL: 4.40 - Build 20.19.15.4454] GLdebug: ON Max texture size: 16384 Max FBO dump size: 4096x16384 Max combined texture units: 192 Max MSAA samples: 16 Viewport: 1500x900 Display scale: 1.5 Available CPU cores: 4 TKOpenGl.OpenGL | Type: Error | ID: 1280 | Severity: High | Message: Error has been generated. GL error GL_INVALID_ENUM in BindVertexArray: (ID: 1497991026) Generic error | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
qml_controls_on_tablet.png (132,863 bytes) |
|
Branch CR32179 has been created by nds. SHA-1: c6187863aef7399d5269a009c2bb74861fe90969 Detailed log of new commits: Author: nds Date: Sun Feb 28 18:16:49 2021 +0300 0032179: Visualization, TKOpenGl - viewer clears QML controls content during redraw on Intel HD Graphics 520 |
|
gldebug_tablet.log (3,252 bytes) |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-02-26 22:19 | nds | New Issue | |
2021-02-26 22:19 | nds | Assigned To | => nds |
2021-02-26 22:19 | nds | File Added: qml_controls_on_tablet.png | |
2021-02-27 10:08 | kgv | Relationship added | child of 0029528 |
2021-02-27 10:08 | kgv | Product Version | => 7.5.0 |
2021-02-27 10:08 | kgv | Summary | Visualization - OpenGl viewer clears QML controls content during redraw on touchscreen device => Visualization, TKOpenGl - viewer clears QML controls content during redraw on Intel HD Graphics 520 |
2021-02-28 18:16 | git | Note Added: 0099227 | |
2021-03-01 10:37 | nds | Description Updated | |
2021-03-01 10:38 | nds | File Added: gldebug_tablet.log | |
2021-03-01 15:34 | kgv | Description Updated | |
2021-03-01 19:42 | kgv | Description Updated | |
2021-08-24 14:19 | kgv | Target Version | 7.6.0 => 7.7.0 |