0032179: Visualization - OpenGl viewer clears QML controls content during redraw on touchscreen device